@@ -1,3 +1,3 @@
-EBUILD mangler-9999.ebuild 551 RMD160 74c9d8680dd2ecfe566c75ce9cb43711f5eb7d99 SHA1 59ea8736b62c708f3d8768f7b1017fb59e48d94f SHA256 ee6bf0ce0a30ee03434877de82c027ed446c942730179f173f325692032d4562
-MISC ChangeLog 353 RMD160 c9786f53119d39e2d4f2b2fe8e5f4db955184047 SHA1 d62de7da487bf49db8daea5b7b384cf2b3960abc SHA256 3e8d062a5a2e8015db3a1adcb9427d1f7649122a1ca48eea39f84e3895123c57
+EBUILD mangler-9999.ebuild 681 RMD160 5445806412ca53923d8da925d7697002729d2484 SHA1 b6c769390d9a39bb2e309aac1d3e30727f481d61 SHA256 8d28ac26cb326776daa3721e607059d65cc5f2737f26fe207b696a5c12c9c67b
+MISC ChangeLog 495 RMD160 bba04b71197776e84160e8479827d5c40a9bc72c SHA1 21285a20b8c0996a272a0b041f73d713cb809b2f SHA256 e5af8eecada1ec0f8b67fe0858c91adfcacbd51ff551d4cb6a7e6cb78d4cd07a
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
