@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mangler
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  17 Jan 2010; Ben de Groot <yngwin@gentoo.org> mangler-9999.ebuild:
+  Add useflags for alsa and pulseaudio, now that there is alsa support.
 
 *mangler-9999 (22 Nov 2009)
 
